--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Francis Luigie C. Quenano",
   "license": "MIT",
   "dependencies": {
+    "aws-sdk": "^2.704.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -20,6 +21,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.19",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "nodemon": "^2.0.4",
     "xss-clean": "^0.1.1"
   }
